# ai

./: .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  LICENSE  README.md  justfile  package.json  pyproject.toml  secretspec.toml
.github/workflows/: publish.yml  test.yml
completions/: ai.bash  ai.zsh  aiuse.bash  aiuse.zsh
config/: config.example.toml  services.example.yaml
docs/: agent-memory-snapshot.md  claude-local-usage.md  code-review-2026-07-23.html  collector-concurrency.md  consumption-flexibility-plan.md  cswap-reliability.md  cursor-quota.md  fix-implementation-plan.md  handoff.md  history-learning.md  json-contract.md  opencode-go-quota.md  packaging.md  pretty-display.md  review-workflow.js  scheduling.md  tokscale-per-provider-investigation.md
docs/memory/: MEMORY.md  checkpoint-ai-project-review.md  feedback_git_over_memory.md
packaging/homebrew/: aiuse.rb
packaging/launchd/: com.djbclark.aiuse.plist  install.sh
src/ai/: __init__.py  __main__.py  cli.py  config.py  models.py  report.py
src/ai/analysis/: history.py  pace.py  use_or_lose.py
src/ai/collectors/: base.py  codexbar.py  cswap.py  runner.py  tokscale.py
src/ai/tui/: __init__.py  app.py  builders.py  report.tcss  widgets.py
src/ai_usage/: __init__.py  __main__.py  cli.py  config.py  models.py  report.py
src/ai_usage/analysis/: __init__.py  use_or_lose.py
src/ai_usage/collectors/: __init__.py  base.py  ccusage.py  codexbar.py  cswap.py  runner.py  tokscale.py
src/aiuse/: __init__.py  __main__.py  ai_stub.py  cli.py  config.py  models.py  report.py
src/aiuse/analysis/: __init__.py  history.py  pace.py  use_or_lose.py
src/aiuse/collectors/: __init__.py  base.py  codexbar.py  cswap.py  runner.py  tokscale.py
src/aiuse/tui/: __init__.py  app.py  builders.py
tests/: test_base_run_json.py  test_cli.py  test_codexbar_parse.py  test_config.py  test_cswap_parse.py  test_history.py  test_models_pace.py  test_pace.py  test_report.py  test_runner_consolidation.py  test_tokscale_parse.py  test_tui.py  test_use_or_lose.py
