[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai"
version = "2.0.0"
description = "Aggregate AI subscription/API usage and flag use-it-or-lose-it allotments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "djbclark" }]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.9",
  "mypy>=1.19",
  "pre-commit>=4.0",
  "pytest>=8.0",
  "ruff>=0.15.21",
  "yamllint>=1.35.1",
]

[project.scripts]
ai = "ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
exclude = ['^\.venv/']
